refactor(transport)!: eliminate AsyncHttpTransport + deprecated wrappers, split ArkJdkHttpTransport
Completes Option E unification — every transport in production is now
either an HttpTransport or a Transport<R> with concrete R; no peer
hierarchy.

Deleted (no remaining production callers after plan 017 migrations):
- AsyncHttpTransport interface
- RetryAsyncTransport (deprecated wrapper, replaced by
  Retry<CompletableFuture<RawResponse>> + AsyncRetryOps)
- RetryTransport (deprecated wrapper, replaced by
  Retry<RawResponse> + SyncRetryOps)
- Adapters.fromAsync / Adapters.toAsync (bridges no longer needed)
- AsyncHttpTransportTest, RetryAsyncTransportTest, RetryTransportTest

Split ArkJdkHttpTransport into:
- ArkJdkSyncTransport implements HttpTransport
- ArkJdkAsyncTransport implements Transport<CompletableFuture<RawResponse>>
- ArkJdkRequestBuilder (package-private helper, shared HttpRequest building)

The old dual-mode class is gone — users wanting both modes against one
HttpClient construct both transports sharing it.

Auto-config sites updated:
- ArkAutoConfiguration (Spring) -> new ArkJdkSyncTransport(...)
- ArkClientFactoryBean (Spring) -> decorator chain via baseTransport.with(Retry.of(...))
- ArkProducer (Quarkus) -> new ArkJdkSyncTransport(...)
- ArkRecorder (Quarkus) -> buildHttpClient() helper + per-mode transport
  construction with decorator chain inline

AsyncArkClient.Builder.transport() now has a single signature accepting
Transport<CompletableFuture<RawResponse>>. The legacy AsyncHttpTransport
overload is gone.

Tests:
- ArkJdkHttpTransportTest migrated to construct ArkJdkSyncTransport for
  sync nested classes, ArkJdkAsyncTransport for async — preserving all
  ~40 cases against the same in-process HttpServer
- AsyncArkClientTest, DefaultAsyncClientRequestTest mock
  Transport<CompletableFuture<RawResponse>> directly
- New RetryAsyncDecoratorTest (13 cases) covers AsyncRetryOps behavior
  end-to-end through Retry<>, recovering coverage lost when
 